Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
 
 
       <section id="main_content">
-        <h1>
-<a id="fitlivin" class="anchor" href="#fitlivin" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>FitLivin</h1>
-
-
+        <p><img src="https://github.com/SCCapstone/FitLivin/issues/64" alt="youtube"># FitLivin</p>
 
 <p>FitLivin Team: Randon Sandifer, Jesse Matthews, Zach Lawson, LJ Urie, Ben Thomas, Parth Choksi</p>
 
