Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
 
       <section id="main_content">
-        <p><img src="https://github.com/SCCapstone/FitLivin/issues/64" alt="youtube"># FitLivin</p>
+        <h1>
+<a id="fitlivin-demo-video" class="anchor" href="#fitlivin-demo-video" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong><a href="https://www.youtube.com/watch?v=W2H5ul8yyF0">FitLivin demo video!</a></strong>
+</h1>
 
 <p>FitLivin Team: Randon Sandifer, Jesse Matthews, Zach Lawson, LJ Urie, Ben Thomas, Parth Choksi</p>
 
