Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 
 
       <section id="main_content">
-        <h1>
-<a id="fitlivin-demo-video" class="anchor" href="#fitlivin-demo-video" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong><a href="https://www.youtube.com/watch?v=W2H5ul8yyF0">FitLivin demo video!</a></strong>
-</h1>
+        <p><strong><a href="https://www.youtube.com/watch?v=W2H5ul8yyF0">FitLivin demo video!</a></strong></p>
 
 <p>FitLivin Team: Randon Sandifer, Jesse Matthews, Zach Lawson, LJ Urie, Ben Thomas, Parth Choksi</p>
 
