--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
       <section id="main_content">
-        <p><strong><a href="https://www.youtube.com/watch?v=W2H5ul8yyF0">FitLivin demo video!</a></strong></p>
+        <p><strong><a href="https://www.youtube.com/watch?v=W2H5ul8yyF0">FitLivin Demo Video!</a></strong></p>
 
 <p>FitLivin Team: Randon Sandifer, Jesse Matthews, Zach Lawson, LJ Urie, Ben Thomas, Parth Choksi</p>
 
