Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
 <p><img src="https://cloud.githubusercontent.com/assets/13972009/14627629/115d4bd0-05c4-11e6-9845-f89a522273d0.jpg" alt=""></p>
 
 <p>Seventeen year old Sarah who has plenty of friends is a very athletic and social person. Sarah goes on jogs and walks every morning. She also plays soccer, swims, and is a lifeguard, so she clearly likes to stay in shape. Lately she has wanted to do a little bit more than just walking and running and wants to learn a little bit about light weight training along with her daily cardio exercises. Although she is very active, she has never really researched her BMI and doesn’t know where she stands. She would love to learn this information and store it to keep track of her progress as she begins training in the gym. However, she wouldn’t want anyone else to be able to view this very personal information seeing as she is, like most girls her age, very private about her weight. GOALS: Sarah wants to be able to keep up with her workouts and stay in shape. She also wants to be able to know when and what workouts to do during the week. She would also like her own custom user account, so she can input her weight and not have to worry about anyone seeing it.</p>
+
+<h2>
+<a id="about-the-developers-and-their-fitness-expertise" class="anchor" href="#about-the-developers-and-their-fitness-expertise" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About the developers and their fitness expertise:</h2>
+
+<p>Randon Sandifer: Randon is a senior at the University of South Carolina. He has experience in software development with java, c++, and cobol. He played baseball and football at the varsity level and knows a lot about how to get in shape for sports.</p>
+
+<p>Zach Lawson: Zach is a senior at the University of South Carolina. He has experience in software development with java, c++, and cobol. He is very interested in bodybuilding and powerlifting, so he knows how to get our users strong. </p>
+
+<p>Parth Choksi: Parth is a senior at the University of South Carolina. He has experience in software development with java and c++. Parth is extremely interested in the fitness world and frequently researches bodybuilding workouts, so he was very knowledgeable in the aspect of getting users lean and in shape. </p>
+
+<p>Jesse Matthews: Jesse is a senior at the University of South Carolina. He has experience in software development with java, c++, and cobol. Jesse played football and soccer at the varsity level and currently lifts weights at the campus gym. His knowledge of the two sports and what muscles go into being successful at them was very useful in compiling our general strength training. </p>
+
+<p>Ben Thomas: Ben is a senior at the University of South Carolina. He has experience in software development with java, c++, and cobol. He played soccer at the varsity level and is very interested in powerlifting at the current time. His knowledge in weight loss and strength training helped compile some of our exercises. </p>
+
+<p>LJ Urie: LJ has now graduated from the University of South Carolina. He also had experience with java, c++, and cobol. He was very interested in extreme sports, and to be successful in these, you must be lean and in shape. He knew some great weight loss programs that allowed him to perform at a high level in snowboarding and skateboarding. We threw these in to also accommodate those involved in extreme sports and create a more well-rounded athlete in general. </p>
       </section>
 
       <footer>
