--- a/index.html
+++ b/index.html
@@ -1,51 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Fitlivin by SCCapstone</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-    <a id="forkme_banner" href="https://github.com/SCCapstone/FitLivin">View on GitHub</a>
-    <div class="shell">
-
+    <div class="wrapper">
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Fitlivin</h1>
-            <h2>FitLivin is a fitness application for android users.</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+        <h1 class="header">Fitlivin</h1>
+        <p class="header">FitLivin is a fitness application for android users.</p>
+
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/SCCapstone/FitLivin/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/SCCapstone/FitLivin/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/SCCapstone/FitLivin">View On GitHub</a></li>
+        </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/SCCapstone">SCCapstone</a></p>
+
+
       </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/SCCapstone/FitLivin/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/SCCapstone/FitLivin/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+      <section>
         <p><strong><a href="https://www.youtube.com/watch?v=W2H5ul8yyF0">FitLivin Demo Video!</a></strong></p>
 
 <p><a href="https://github.com/SCCapstone/FitLivin">GitHub Repo</a></p>
@@ -64,7 +48,7 @@
 
 <p>Sarah Mathews</p>
 
-<p><img src="https://cloud.githubusercontent.com/assets/13972009/14627629/115d4bd0-05c4-11e6-9845-f89a522273d0.jpg" alt=""></p>
+<p><img src="https://cloud.githubusercontent.com/assets/13972009/14648662/5d69bdc0-0631-11e6-8568-0a95a7d5d26b.jpg" alt=""></p>
 
 <p>Seventeen year old Sarah who has plenty of friends is a very athletic and social person. Sarah goes on jogs and walks every morning. She also plays soccer, swims, and is a lifeguard, so she clearly likes to stay in shape. Lately she has wanted to do a little bit more than just walking and running and wants to learn a little bit about light weight training along with her daily cardio exercises. Although she is very active, she has never really researched her BMI and doesn’t know where she stands. She would love to learn this information and store it to keep track of her progress as she begins training in the gym. However, she wouldn’t want anyone else to be able to view this very personal information seeing as she is, like most girls her age, very private about her weight. GOALS: Sarah wants to be able to keep up with her workouts and stay in shape. She also wants to be able to know when and what workouts to do during the week. She would also like her own custom user account, so she can input her weight and not have to worry about anyone seeing it.</p>
 
@@ -83,21 +67,11 @@
 
 <p>LJ Urie: LJ has now graduated from the University of South Carolina. He also had experience with java, c++, and cobol. He was very interested in extreme sports, and to be successful in these, you must be lean and in shape. He knew some great weight loss programs that allowed him to perform at a high level in snowboarding and skateboarding. We threw these in to also accommodate those involved in extreme sports and create a more well-rounded athlete in general. </p>
       </section>
-
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/SCCapstone">SCCapstone</a> can be found on <a href="https://github.com/SCCapstone/FitLivin">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
-
     </div>
-
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
