--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Fitlivin by SCCapstone</title>
+    <title>FitLivin by SCCapstone</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Fitlivin</h1>
+        <h1 class="header">FitLivin</h1>
         <p class="header">FitLivin is a fitness application for android users.</p>
 
         <ul>
