--- a/index.html
+++ b/index.html
@@ -1,38 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>FitLivin by SCCapstone</title>
+    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>FitLivin by SCCapstone</title>
   </head>
+
   <body>
-    <div class="wrapper">
+    <a id="forkme_banner" href="https://github.com/SCCapstone/FitLivin">View on GitHub</a>
+    <div class="shell">
+
       <header>
-        <h1 class="header">FitLivin</h1>
-        <p class="header">FitLivin is a fitness application for android users.</p>
-
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/SCCapstone/FitLivin/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/SCCapstone/FitLivin/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/SCCapstone/FitLivin">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/SCCapstone">SCCapstone</a></p>
-
-
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>FitLivin</h1>
+            <h2>FitLivin is a fitness application for android users.</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
       </header>
-      <section>
+
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/SCCapstone/FitLivin/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/SCCapstone/FitLivin/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <p><strong><a href="https://www.youtube.com/watch?v=W2H5ul8yyF0">FitLivin Demo Video!</a></strong></p>
 
 <p><a href="https://github.com/SCCapstone/FitLivin">GitHub Repo</a></p>
+
+<p><a href="https://www.youtube.com/watch?v=W2H5ul8yyF0" title="FitLivin: Android Application Demo."><img src="http://i.imgur.com/gMyjWs9.png?1" alt="FitLivin"></a></p>
 
 <p>FitLivin Team: Randon Sandifer, Jesse Matthews, Zach Lawson, LJ Urie, Ben Thomas, Parth Choksi</p>
 
@@ -67,11 +85,21 @@
 
 <p>LJ Urie: LJ has now graduated from the University of South Carolina. He also had experience with java, c++, and cobol. He was very interested in extreme sports, and to be successful in these, you must be lean and in shape. He knew some great weight loss programs that allowed him to perform at a high level in snowboarding and skateboarding. We threw these in to also accommodate those involved in extreme sports and create a more well-rounded athlete in general. </p>
       </section>
+
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/SCCapstone">SCCapstone</a> can be found on <a href="https://github.com/SCCapstone/FitLivin">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
   </body>
 </html>
